chore: compile in prepare

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "coverage": "nyc report --reporter=text-lcov > ./coverage/lcov.info",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "eslint .",
-    "prepublishOnly": "npx rimraf lib && npx mkdirp lib && babel src --out-dir lib",
+    "prepare": "npx rimraf lib && npx mkdirp lib && babel src --out-dir lib",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "nyc mocha --require @babel/register --recursive",
     "update-compat": "node scripts/update-compat && git add compat.md README.md && git commit --quiet -m \"docs: Update feature compat table\" &> /dev/null || true"
